add MenuJDialog thêm nhân viên, khách hàng

--- a/src/main/java/UI/Component/NhanVienJDialog.form
+++ b/src/main/java/UI/Component/NhanVienJDialog.form
@@ -172,12 +172,8 @@
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="rdbNu" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="rdbNam" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
+                      <Component id="rdbNu" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="rdbNam" min="-2" max="-2" attributes="0"/>
                       <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                           <Component id="jComboBoxChucVu" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
