--- a/src/main/java/UI/Detail/ChiTietSPDetailJDialog.form
+++ b/src/main/java/UI/Detail/ChiTietSPDetailJDialog.form
@@ -155,9 +155,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtTenSanPham">
-          <Properties>
-            <Property name="enabled" type="boolean" value="false"/>
-          </Properties>
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtTenSanPhamKeyPressed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="cbxMauSac">
           <Properties>
