--- a/src/main/java/UI/Detail/SanPhamDetailJDialog.form
+++ b/src/main/java/UI/Detail/SanPhamDetailJDialog.form
@@ -157,6 +157,9 @@
       </AuxValues>
     </Component>
     <Component class="javax.swing.JTextField" name="txtTenSP">
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtTenSPKeyPressed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
